# sgu-student-rag

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ocr_pdf.py  pyproject.toml  pyrightconfig.json  rag_system.ipynb  readme.md  rebuild_index_with_metadata.py  requirements.txt  run_web.ps1  streamlit_C4.py  streamlit_app.py  test_api.ipynb
.github/instructions/: rag-system.instructions.md
.github/workflows/: ci.yml
docs/: mlops-runbook.md
eval_data/: retrieval_eval_sample.json
langchain_tutorials/: 01_document_loaders.ipynb  02_text_splitters.ipynb  03_vector_stores_faiss.ipynb  04_llm_and_qa.ipynb  05_advanced_rag_techniques.ipynb
src/rag_core/: __init__.py  chunking.py  config.py  environment.py  ingestion.py  pipeline.py  qa_service.py  vector_store.py
src/rag_sgu/: __init__.py  cli.py  config.py  document_ingestion.py  evaluation.py  logging_utils.py  mlops.py  pipeline.py  qa_service.py  schemas.py  text_chunking.py  vector_index.py
src/rag_sgu/web/: __init__.py  app.py  service.py  student_db.py
tests/: test_config.py  test_evaluation.py  test_mlops.py  test_text_chunking.py  test_web_service.py
vector_store/: index.faiss  index.pkl
