[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-sgu"
version = "1.1.0"
description = "MLOps-oriented RAG pipeline for SGU student documents"
readme = "readme.md"
requires-python = ">=3.10,<3.14"

[project.scripts]
rag-sgu = "rag_sgu.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
